--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <div class="wrapper">
-		<div class="top-nav-wrap">
 			<div class="top-nav">
 				<ul class="top-nav-l">
 					<li >
@@ -50,7 +49,6 @@
 					</li>
 				</ul>
 			</div>
-		</div>
 		<!-- 搜索区域 -->
 		<div class="search-wrap">
 			<div class="search-con">
@@ -96,8 +94,7 @@
 					</div>
 				</div>
 				<div class="code-box">
-					<a href="#" class="phone">手机淘宝</a>
-					<a href="#" class="code"></a>
+					<img scr="">
 					<a href="#" class="close">X</a>
 				</div>
 			</div>
@@ -233,27 +230,27 @@
 					</div>
 					<div class="inner-content">
 						<div>
-							<img src="./img/pic2.png" alt="">
+							<img >
 						</div>
 						<div>
 							<div class="head">
-								<img src="./img/tm.png" alt="">
+								<img >
 								<span class="tm">理想生活上天猫
 								</span>
 								<a href="#">
-									<img src="./img/pic3.png" alt="">
+									<img >
 								</a>
 							</div>
 						</div>
 					</div>
 					<div class="inner-right">
 						<a href="#">
-							<img src="./img/pic1.png" alt="">
+							<img >
 						</a>
 						<div class="hot">
 							<span>今日热卖</span>
 							<a href="#">
-								<img src="./img/pic4.png" alt="">
+								<img >
 							</a>
 						</div>
 					</div>
@@ -262,7 +259,7 @@
 					<div class="content">
 						<div class="logo-box"></div>
 						<a href="#">
-							<img src="./img/pic5.png">
+							<img>
 						</a>
 					</div>
 				</div>
@@ -286,14 +283,14 @@
 						</p>
 					</div>
 					<div >
-						<table class="happy">
-							<tr>
-								<th class="unhappy">0</th>
-								<th class="unhappy">0</th>
-								<th class="unhappy">0</th>
-								<th class="unhappy">0</th>	
+						<table  width="250">
+							<tr class="unhappy">
+								<th>0</th>
+								<th>0</th>
+								<th>0</th>
+								<th>0</th>	
 							</tr>
-							<tr>
+							<tr class="happy">
 								<th>待收货</th>
 								<th>待发货</th>
 								<th>待付款</th>
@@ -304,7 +301,6 @@
 				</div>
 				<div class="message">
 					<a href="#">网上有害信息举报
-						<span></span>
 					</a>
 				</div>
 				<div class="notice">
@@ -330,73 +326,61 @@
 					<ul>
 						<li>
 							<a href="#">
-								<span class="icon1"></span>
 								<p>充话费</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon2"></span>
 								<p>旅行</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon3"></span>
 								<p>车险</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon4"></span>
 								<p>游戏</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon5"></span>
 								<p>彩票</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon6"></span>
 								<p>电影</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon7"></span>
 								<p>酒店</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon8"></span>
 								<p>理财</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon9"></span>
 								<p>找服务</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon10"></span>
 								<p>演出</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon11"></span>
 								<p>水电煤</p>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<span class="icon12"></span>
 								<p>火车票</p>
 							</a>
 						</li>
