--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
 						<a href="#">沙发</a>
 					</div>
 				</div>
-				<div class="code-box">
-					<img scr="">
-					<a href="#" class="close">X</a>
+				<div>
+					<img src="../淘宝/taobao1.jpg" width="150px" height="120px" style="margin:-147px -202px 29px 973px">
 				</div>
 			</div>
 		</div>
@@ -230,7 +229,7 @@
 					</div>
 					<div class="inner-content">
 						<div>
-							<img >
+							<img src="../淘宝/taobao2.jpg" width="500px" height="260px">
 						</div>
 						<div>
 							<div class="head">
@@ -238,7 +237,7 @@
 								<span class="tm">理想生活上天猫
 								</span>
 								<a href="#">
-									<img >
+									<img>
 								</a>
 							</div>
 						</div>
