--- a/index.html
+++ b/index.html
@@ -229,29 +229,18 @@
 					</div>
 					<div class="inner-content">
 						<div>
-							<img src="../淘宝/taobao2.jpg" width="500px" height="260px">
+							<img src="../淘宝/taobao2.jpg" width="525px" height="260px">
 						</div>
 						<div>
 							<div class="head">
-								<img >
-								<span class="tm">理想生活上天猫
-								</span>
-								<a href="#">
-									<img>
-								</a>
+								<img src="../淘宝/taobao3.jpg">
 							</div>
 						</div>
 					</div>
 					<div class="inner-right">
-						<a href="#">
-							<img >
-						</a>
-						<div class="hot">
-							<span>今日热卖</span>
-							<a href="#">
-								<img >
-							</a>
-						</div>
+						<a >
+							<img src="../淘宝/taobao4.jpg"width="140px"height="245px">
+			 			</a>
 					</div>
 				</div>
 				<div class="main-bottom">
@@ -267,7 +256,9 @@
 				<div class="member">
 					<div class="member-head">
 						<div class="head">
-							<a href="#"></a>
+							<a href="#">
+								<img src="../淘宝/taobao5.PNG" height="50px">
+							</a>
 						</div>
 						<span class="info">Hi! 飞龙以为虹</span>
 						<p>
